--- a/gateway.yml
+++ b/gateway.yml
@@ -1,1 +1,9 @@
-foo: bar
+spring:
+  cloud:
+    gateway:
+      routes:
+        - predicates:
+            - Path=/emps/**
+          filters:
+            - StripPrefix=1
+          uri: http://localhost:8081
